Apply IntelliJ suggestions